--- a/public_css/main.css
+++ b/public_css/main.css
@@ -103,7 +103,7 @@ div.about {
 }
 
 body {
-	background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/fuji_background.jpg) no-repeat center center fixed;
+	background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../public_images/fuji_background.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
