--- a/public_css/main.css
+++ b/public_css/main.css
@@ -95,6 +95,7 @@ div.about {
 	max-width: 750px;
 	background-color: white;
 	box-shadow: 10px 10px 5px #000000;
+	border-radius: 10px;
 }
 
 .side_spacing {
@@ -124,8 +125,26 @@ body {
 .bottom p {
 	float: right;
 	padding-right: 20px;
+	display: table;
 }
 
 .bottom a {
 	color: #ffffff;
+	text-decoration: none;
+	display: table-cell;
+	text-align: center;
+}
+
+.bottom a:first-child {
+	min-width: 130px;
+	padding-left: 7px;
+}
+
+.bottom a:last-child {
+	min-width: 90px;
+}
+
+.bottom a:hover {
+	color: #ffffff;
+	font-weight: bold;
 }
