added compatability for border-radius on images

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,9 @@
 	height: 70px;
 	width: 70px;
 	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-o-border-radius: 50%;
 	float: left;
 	margin: 2.5px 10px 2.5px 20px;
 }
@@ -122,6 +125,9 @@
 	height: 60%;
 	width: 60%;
 	border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
+	-webkit-border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
+	-moz-border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
+	-o-border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
 	margin: 20px;
 	float: right;
 	display: inline-block;
