--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,7 +105,7 @@
 	background-color: white;
 	box-shadow: 10px 10px 5px #000000;
 	border-radius: 10px;
-  height: auto;
+	height: auto;
 	max-height: 100%;
 	overflow: auto;
 }
@@ -122,8 +122,8 @@
 }
 
 .about img {
-	height: 60%;
-	width: 60%;
+	max-height: 60%;
+	max-width: 60%;
 	border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
 	-webkit-border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
 	-moz-border-radius: 200px 200px 200px 200px / 100px 100px 100px 100px;
